[gd_scene load_steps=6 format=2]

[ext_resource path="res://simulation/WorldContainer.gd" type="Script" id=1]
[ext_resource path="res://simulation/LeifWorld.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/RuleContainer.tscn" type="PackedScene" id=3]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 2.0
glow_strength = 1.1
glow_bloom = 0.85
glow_blend_mode = 1
glow_hdr_threshold = 1.5
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[node name="WorldContainer" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 2000, 2000 )
color = Color( 0, 0, 0, 1 )

[node name="LeifWorld" parent="." instance=ExtResource( 2 )]
position = Vector2( 170, 0 )
WORLD_SIZE = Vector2( 1750, 1080 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="VBoxContainer" parent="CanvasLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1670.0
margin_bottom = -360.0
rect_min_size = Vector2( 250, 720 )

[node name="FPSLabel" type="Label" parent="CanvasLayer/Control"]
use_parent_material = true
margin_right = 250.0
margin_bottom = 14.0

[node name="RuleInfoContainer2" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/RuleInfoContainer2"]
margin_right = 250.0
margin_bottom = 20.0

[node name="RestartButton" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/HBoxContainer"]
margin_right = 57.0
margin_bottom = 20.0
text = "Restart"

[node name="QuitButton2" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/HBoxContainer"]
margin_left = 61.0
margin_right = 101.0
margin_bottom = 20.0
text = "Quit"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/RuleInfoContainer2"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 44.0

[node name="FullscreenButton" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/HBoxContainer2"]
margin_right = 123.0
margin_bottom = 20.0
text = "Toggle Fullscreen"

[node name="RuleNameLabel" type="Label" parent="CanvasLayer/Control/RuleInfoContainer2"]
margin_top = 48.0
margin_right = 250.0
margin_bottom = 62.0

[node name="RuleButtonContainer" type="HBoxContainer" parent="CanvasLayer/Control/RuleInfoContainer2"]
margin_top = 66.0
margin_right = 250.0
margin_bottom = 86.0

[node name="RandomButton" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/RuleButtonContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Randomize"

[node name="LoadButton" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/RuleButtonContainer"]
margin_left = 87.0
margin_right = 129.0
margin_bottom = 20.0
text = "Load"

[node name="SaveButton" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/RuleButtonContainer"]
margin_left = 133.0
margin_right = 174.0
margin_bottom = 20.0
text = "Save"

[node name="ImportButtons" type="HBoxContainer" parent="CanvasLayer/Control/RuleInfoContainer2"]
margin_top = 90.0
margin_right = 250.0
margin_bottom = 110.0

[node name="ImportButton" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/ImportButtons"]
margin_right = 56.0
margin_bottom = 20.0
text = "Import"

[node name="ExportButton" type="Button" parent="CanvasLayer/Control/RuleInfoContainer2/ImportButtons"]
margin_left = 60.0
margin_right = 112.0
margin_bottom = 20.0
text = "Export"

[node name="RuleContainer" parent="CanvasLayer/Control" instance=ExtResource( 3 )]
margin_top = 132.0
margin_right = 250.0
margin_bottom = 132.0

[node name="SavePanel" type="ConfirmationDialog" parent="CanvasLayer"]
margin_right = 8.0
margin_bottom = 8.0
window_title = "Pick a name for these rules"

[node name="RuleNameEdit" type="LineEdit" parent="CanvasLayer/SavePanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 214.0
margin_bottom = 34.0
align = 1
max_length = 32

[node name="ImportPanel" type="ConfirmationDialog" parent="CanvasLayer"]
margin_right = 8.0
margin_bottom = 8.0
window_title = "Paste the import string here"

[node name="ImportStringEdit" type="LineEdit" parent="CanvasLayer/ImportPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 214.0
margin_bottom = 34.0
max_length = 512

[node name="ExportPanel" type="AcceptDialog" parent="CanvasLayer"]
margin_right = 8.0
margin_bottom = 8.0
window_title = "Copy this string to share it!"

[node name="ExportStringEdit" type="LineEdit" parent="CanvasLayer/ExportPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 220.0
margin_bottom = 34.0
align = 1
max_length = 512
editable = false

[node name="LoadMenu" type="PopupMenu" parent="CanvasLayer"]
margin_right = 20.0
margin_bottom = 20.0
allow_search = true

[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/HBoxContainer/QuitButton2" to="." method="_on_QuitButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/HBoxContainer2/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/RuleButtonContainer/RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/RuleButtonContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/RuleButtonContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/ImportButtons/ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RuleInfoContainer2/ImportButtons/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="attraction_updated" from="CanvasLayer/Control/RuleContainer" to="." method="_on_RuleContainer_attraction_updated"]
[connection signal="range_updated" from="CanvasLayer/Control/RuleContainer" to="." method="_on_RuleContainer_range_updated"]
[connection signal="confirmed" from="CanvasLayer/SavePanel" to="." method="_on_SavePanel_confirmed"]
[connection signal="confirmed" from="CanvasLayer/ImportPanel" to="." method="_on_ImportPanel_confirmed"]
[connection signal="id_pressed" from="CanvasLayer/LoadMenu" to="." method="_on_LoadMenu_id_pressed"]
